[package]
name = "smile-marco"
version = "0.1.0"
edition = "2021"
authors = ["shunling <shunlingsmile@gmail.com>"]
description = "One contains many useful macros for generating common code"
keywords = ["macros", "get","builder"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/shunlingsmile/smile-marco"
documentation = "https://docs.rs/smile-marco"

[lib]
proc-macro = true
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
proc-macro2 = "1.0.79"
syn = { version = "2.0.53", features = [] }
quote = "1.0.35"

[features]
default = ["full"]

getter = []
setter = []
wither = []
builder = []
full = ["getter", "setter", "wither", "builder"]
